# lsif-parser

./: .gitignore  Cargo.toml  README.md
lsif-dom/: Cargo.toml
lsif-dom/src/: dom.rs  lib.rs  value.rs
lsif-dom/src/dom/: macros.rs
lsif-parser/: Cargo.toml
lsif-parser-cli/: Cargo.toml
lsif-parser-cli/src/: main.rs
lsif-parser-lib/: Cargo.toml
lsif-parser-lib/src/: dom.rs  lib.rs  parser.rs  syntax.rs
lsif-parser-lib/src/util/: coords.rs  mod.rs
lsif-parser/benches/: benches.rs
lsif-parser/src/: lib.rs  parser.rs  syntax.rs  tests.rs  types.rs
lsif-parser/src/util/: escape.rs  mod.rs
lsif-parser/tests/: integration_test.rs
lsif-type/: Cargo.toml
lsif-type/src/: lib.rs  types.rs  vertex.rs
lsif-type/src/types/: edge.rs
src/: lib.rs  main.rs  parser.rs  syntax.rs
src/utils/: escape.rs
