[package]
name = "lsif-parser"
version = "0.1.0"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
m_lexer = "0.0.4"
logos = "0.11.4"
