[package]
name = "lsif-parser-lib"
version = "0.1.0"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.10.0"
#serde = { version = "1.0", optional = true }
m_lexer = "0.0.4"
logos = "0.11.4"
lsp-types = "0.82.0"
#indexmap = "1.3.2"

[package.metadata.docs.rs]
all-features = true
